--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "example": "cd example && ts-node index.ts",
     "build-example": "rimraf example/public/* && webpack --config example/webpack.config.js"
   },
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/express": "^4.11.0",
     "@types/isomorphic-fetch": "0.0.34",
+    "@types/jest": "^22.1.2",
     "assets-webpack-plugin": "^3.5.1",
     "awesome-typescript-loader": "^3.4.1",
     "babel-core": "^6.26.0",
@@ -30,11 +31,24 @@
     "class-transformer": "^0.1.8",
     "express": "^4.16.2",
     "isomorphic-fetch": "^2.2.1",
+    "jest": "^22.2.2",
     "rimraf": "^2.6.2",
+    "ts-jest": "^22.0.3",
     "ts-node": "^4.1.0",
     "typescript": "^2.6.2",
     "webpack": "^3.10.0",
     "webpack-merge": "^4.1.1",
     "webpack-node-externals": "^1.6.0"
+  },
+  "jest": {
+    "transform": {
+      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "src/.+\\.test\\.tsx?$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
   }
 }
