--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.1.9",
     "@types/express": "^4.11.0",
     "@types/isomorphic-fetch": "0.0.34",
     "@types/jest": "^22.1.2",
@@ -29,6 +30,8 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "class-transformer": "^0.1.8",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "express": "^4.16.2",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^22.2.2",
@@ -41,6 +44,7 @@
     "webpack-node-externals": "^1.6.0"
   },
   "jest": {
+    "setupTestFrameworkScriptFile": "<rootDir>/setupTests.js",
     "transform": {
       "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
