--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start-example": "cd example && ts-node index.ts",
     "build-example": "rimraf example/public/* && webpack --config example/webpack.config.js",
     "watch-example": "webpack --watch --config example/webpack.config.js --display=minimal",
-    "dev-example": "concurrently --kill-others -n server,webpack \"npm run start-example\" \"npm run watch-example\""
+    "dev-example": "concurrently --kill-others -n server,webpack \"npm run start-example\" \"npm run watch-example\"",
+    "lint": "tslint -p ."
   },
   "author": "",
   "license": "ISC",
@@ -41,6 +42,7 @@
     "rimraf": "^2.6.2",
     "ts-jest": "^22.0.3",
     "ts-node": "^4.1.0",
+    "tslint": "^5.9.1",
     "typescript": "^2.6.2",
     "webpack": "^3.10.0",
     "webpack-merge": "^4.1.1",
