--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "es6",
+        "moduleResolution": "node",
+        "target": "es2015",
         "jsx": "react"
     },
     "exclude": [
