--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "react-router-pages",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/a-neumann/react-router-pages.git"
+  },
   "description": "Data pre-loading universal config based router, built on top of React Router",
   "main": "lib/index.js",
   "scripts": {
     "test": "jest",
-    "start-example": "cd example && ts-node index.ts",
-    "build-example": "rimraf example/public/* && webpack --config example/webpack.config.js",
-    "watch-example": "webpack --watch --config example/webpack.config.js --display=minimal",
-    "dev-example": "concurrently --kill-others -n server,webpack \"npm run start-example\" \"npm run watch-example\"",
     "lint": "tslint -p .",
     "build": "rimraf lib && tsc -p .",
     "publish:pre": "npm run lint && npm run test && npm run build",
@@ -23,9 +23,7 @@
   "dependencies": {
     "@types/prop-types": "^15.5.2",
     "@types/react": "^16.0.34",
-    "@types/react-dom": "^16.0.3",
     "@types/react-router-dom": "^4.2.3",
-    "concurrently": "^3.5.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -33,27 +31,14 @@
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.9",
-    "@types/express": "^4.11.0",
-    "@types/isomorphic-fetch": "0.0.34",
     "@types/jest": "^22.1.2",
-    "assets-webpack-plugin": "^3.5.1",
-    "awesome-typescript-loader": "^3.4.1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "class-transformer": "^0.1.8",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "express": "^4.16.2",
-    "isomorphic-fetch": "^2.2.1",
     "jest": "^22.2.2",
     "rimraf": "^2.6.2",
     "ts-jest": "^22.0.3",
-    "ts-node": "^4.1.0",
     "tslint": "^5.9.1",
-    "typescript": "^2.6.2",
-    "webpack": "^3.10.0",
-    "webpack-merge": "^4.1.1",
-    "webpack-node-externals": "^1.6.0"
+    "typescript": "^2.6.2"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/setupTests.js",
